[package]
name = "nl-sh"
version = "0.1.0"
edition = "2021"

[dependencies]
anthropic = { git="https://github.com/AbdelStark/anthropic-rs.git" }
clap = { version = "4.2.7", features = ["derive"] }
home = "0.5.9"
inquire = { git = "https://github.com/mikecvet/inquire.git", branch = "history" }
llama_cpp_rs = "0.3.0"
mockall = "=0.9.1"
openai-api-rs = "4.0.7"
regex = "1"
tempfile = "3.10.1"
tokio = { version = "1.36.0", features = ["full"] }
